# phoneme

./: Cargo.toml  README.md  com.mohfy.word2ipa.json  io.github.mohfy.phoneme.json  io.github.mohfy.word2ipa.json  meson.build  word2ipa.desktop
data/: com.mohfy.word2ipa.desktop.in  com.mohfy.word2ipa.gschema.xml  com.mohfy.word2ipa.metainfo.xml.in  com.mohfy.word2ipa.service.in  io.github.mohfy.phoneme.desktop.in  io.github.mohfy.phoneme.gschema.xml  io.github.mohfy.phoneme.metainfo.xml.in  io.github.mohfy.phoneme.service.in  io.github.mohfy.word2ipa.desktop.in  io.github.mohfy.word2ipa.gschema.xml  io.github.mohfy.word2ipa.metainfo.xml.in  io.github.mohfy.word2ipa.service.in  meson.build  word2ipa.gresource.xml.in
data/dicts/: fa.json  jam.json  or.json  sv.json  vi_C.json  vi_N.json  yue.json  zh_hans.json
data/icons/: meson.build
po/: POTFILES.in  meson.build  nl.po
src/: application.rs  config.rs  main.py  main.rs  meson.build  phoneme.gresource.xml  phoneme.in  window.blp  window.py  word2ipa.gresource.xml  word2ipa.in
src/dicts/: en_UK.json  eo.json  ipa_lookup_table.json  ma.json  nb.json  sw.json  vi_S.json  zh_hant.json
